# Orderbook-Sim

./: CMakeLists.txt  EOF
.cache/clangd/index/: KrakenFeed.cpp.4BC052B205091021.idx  Order.hpp.20947DE66CBB15EF.idx  OrderBook.cpp.E9EF9A27614E2909.idx  OrderBook.hpp.4B2069F8DA0E5701.idx  Trade.hpp.9871C9EB1BD449D8.idx  main.cpp.A6F1108F5BDB5573.idx
apps/: main.cpp
docs/: spec.md
include/ob/: BitfinexFeed.hpp  Order.hpp  Orderbook.hpp  Trade.hpp
src/: BitfinexFeed.cpp  Orderbook.cpp
tests/: test_orderbook.cpp
